--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,9 @@ jobs:
           python -m pip install --upgrade pip
           pip uninstall -y black click
           pip install click==8.1.3
-          pip install black==21.12b0 flake8==4.0.1 flake8-bugbear==22.1.11 flake8-pie==0.15.0 isort==5.9.3 mypy==0.931 pytest==7.0.1
+          pip install pipx
+          pipx install black
+          pip install flake8==4.0.1 flake8-bugbear==22.1.11 flake8-pie==0.15.0 isort==5.9.3 mypy==0.931 pytest==7.0.1
 
       - name: Run black --check
         run: black --check .
