--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,14 +30,14 @@ jobs:
           pipx install black
           pip install flake8==4.0.1 flake8-bugbear==22.1.11 flake8-pie==0.15.0 isort==5.9.3 mypy==0.931 pytest==7.0.1
 
-      - name: Run black --check
+      - name: Check imports with isort
+        run: isort --check-only --profile black .
+
+      - name: Run black formatting check
         run: black --check .
 
-      - name: Run flake8
+      - name: Run flake8 linting
         run: flake8 .
-
-      - name: Run isort --check
-        run: isort --check-only --profile black .
 
       - name: Run mypy
         run: mypy .
