--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip uninstall -y black click
+          pip uninstall -y black click pydantic
           pip install click==8.1.3
           pip install pipx
           pipx install black
