--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
           pip install click==8.1.3
           pip install pipx
           pipx install black
-          pip install flake8==4.0.1 flake8-bugbear==22.1.11 flake8-pie==0.15.0 isort==5.9.3 mypy==1.14.1 pytest==7.0.1
+          pip install flake8==4.0.1 flake8-bugbear==22.1.11 flake8-pie==0.15.0 isort==5.9.3 mypy==1.14.1 pytest==7.0.1 htppx==0.28.1
           pip install sqlalchemy pydantic fastapi
           
       - name: Run black formatting check
